Makes several fixes on mobile calendar
Fixed font size for all views, mobile and desktop.
Fixed padding issue as shown in ticket.
Adjusted dimensions of events boxes on most views.
Removed unnecessary font size declarations.

mario h.
node/62579

--- a/sites/all/themes/slac/sass/components/_calendar-events-by-color.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-events-by-color.scss
@@ -9,7 +9,7 @@
     border-left: 3px solid color(grey);
 
   .type-access_information {
-    padding-top: .2rem;
+    padding-top: 0;
   }
 
     // individual styles
