--- a/sites/all/themes/slac/sass/components/_calendar.scss
+++ b/sites/all/themes/slac/sass/components/_calendar.scss
@@ -177,7 +177,6 @@
   clear: both;
   font-style: normal;
   color: #555;
-  font-size: 0.8em;
 }
 
 // IE6 does not support min-height, using Min-Height fast hack from http://www.dustindiaz.com/min-height-fast-hack
@@ -246,7 +245,6 @@
 }
 
 .calendar-calendar div.title {
-  font-size:.8em;
   text-align: center;
 }
 
@@ -315,14 +313,6 @@ table .mini-day-on a {
   text-decoration: underline;
 }
 
-.calendar-calendar .mini .title {
-  font-size: .8em;
-}
-
-.mini .calendar-calendar .week {
-  font-size: .7em;
-}
-
 .mini-row {
   width: 100%;
   border: none;
@@ -383,7 +373,7 @@ table.calendar-legend tr.even .stripe {
 }
 
 .calendar-calendar td.calendar-agenda-hour .calendar-hour {
-  font-size: 1.2em;
+  @include font-size(14px);
   font-weight: bold;
 }
 
@@ -495,7 +485,11 @@ table.calendar-legend tr.even .stripe {
 // Use x-small instead of em to avoid multiplying effect in nested items.
 .calendar-calendar div.calendar {
   border: none;
-  font-size: x-small;
+  @include font-size(14px);
+
+  @include breakpoint($tablet-large) {
+    @include font-size(11px);
+  }
 }
 
 .calendar-calendar td .inner div.calendar div.calendar-more,
@@ -1080,9 +1074,7 @@ ul.calendar-links,
 }
 
 .calendar .time {
-  @include font-size(11px);
   display: block;
-  margin-bottom: .2rem;
   font-weight: bold;
 }
 
@@ -1125,7 +1117,6 @@ ul.calendar-links,
       width: 200px;
       position: relative;
       left: 0;
-      @include font-size(14px);
       color: lighten($dim-grey, 10%);
     }
   }
